# site-block-monitor

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  data.json  main.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/bot/: config.py  loader.py  middlewares.py  states.py
backend/bot/handlers/: checks_history.py  menu.py  monitored_site.py  settings.py  start.py
backend/bot/integrations/ping_admin/: __init__.py  client.py  exceptions.py  schemas.py  service.py
backend/bot/keyboards/: menu.py  monitored_site.py  settings.py  utils.py
backend/bot/middlewares/: __init__.py  client.py  i18n.py
backend/bot/ping_admin/: client.py  schemas.py
backend/bot/services/: client.py  monitored_site.py  site_check.py
backend/bot/utils/: aio.py  formatters.py  loop_tasks.py  validators.py
backend/core/: admin.py  choices.py  managers.py  models.py  tasks.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_sitecheck_options_alter_sitecheck_date.py  0003_clientmonitoredsite_is_active_and_more.py
backend/locales/: messages.pot
backend/locales/en/LC_MESSAGES/: messages.po
backend/locales/ru/LC_MESSAGES/: messages.po
