[project]
name = "site-block-monitor"
version = "0.1.0"
description =  "Telegram for monitoring sites status in different countries"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "babel>=2.17.0",
    "celery>=5.5.2",
    "django>=5.2.1",
    "environs>=14.1.1",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "redis>=6.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["."]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "COM812",  # trailing comma
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
